[project]
name = "pyos-utils"
version = "0.1.0"
description = "Python utilities for working with the operating system."
readme = "README.md"
authors = [{ name = "James Armes", email = "jamesleearmes@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pycaw; sys_platform == 'win32'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.7",
]
[tool.pyright]
typeCheckingMode = "strict"        # Enable strict type checking
reportUnusedVariable = true        # Report unused variables
reportUnusedImport = true          # Report unused imports
reportOptionalSubscript = false    # Allow optional subscript without error
reportOptionalMemberAccess = false # Allow optional member access without error


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "D101",
    "D102",
    "D103",
    "D107",
    "SLF001",
    "FBT003",
    "D100",
    "PLR2004",
    "S108",
    "T201",
]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
ignore = [
    "D212",
    "D203",
    "TD003",
    "TD002",
    "FIX002",
    "D211",
    "S603",
    "D104",
    "D100",
]

select = [
    "ALL", # include all the rules, including new ones
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = ["."]
